# oop4

./: CMakeLists.txt  main.cpp
include/: Array.h  Figure.h  Functions.h  Pentagon.h  Rhombus.h  Trapezoid.h
tests/: test.cpp
